# EmbarcaTechSensores_i2c

./: CMakeLists.txt  README.md  sensores_dual_core.c  sensores_i2c.c
